# interprether

./: .env.development  .env.production  .gitignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  docker-compose.prod.yml  docker-compose.yml  fake_tx.sh  scanner.sh
.github/workflows/: ci-backend.yml  ci-frontend.yml  deploy.yml
docker/backend/: Dockerfile.dev  Dockerfile.prod  entrypoint.prod
docker/frontend/: Dockerfile.dev  Dockerfile.prod  nginx.conf
frontend/: Cargo.toml  RESOURCES.md  Trunk.toml  index.html
frontend/hooks/: shynet.html
frontend/scss/: _loader.scss  index.scss
frontend/src/: app.css  main.rs  model.rs  string.rs  transaction_card.rs  transaction_filter.rs
frontend/src/components/: filter.rs  hero.rs  mod.rs  transaction_card.rs  transaction_message.rs
frontend/src/view/: common.rs  hero.rs  mod.rs  transaction.rs
scripts/: scanner.sh  web.sh
src/: block.rs  lib.rs  main.rs  redis.rs  transaction.rs
