[package]
name = "eth_oracle_rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.10.1", features = ["full"] }
web3 = { version = "0.17.0", default-features = false, features = ["ws-tokio"] }
once_cell = "1.8.0"
deadpool-redis = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.3"
env_logger = "0.9.0"
