[package]
name = "frontend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.18"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.43"
chrono-humanize = "0.2.1"
chrono = "0.4.19"
js-sys = "0.3"
serde_qs = "0.8.5"

[profile.release]
lto = true
