[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
chrono = "0.4.19"
chrono-humanize = "0.2.1"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_qs = "0.8.5"
yew = "0.18"
yew-router = "0.15.0"

[profile.release]
lto = true
